--- a/server/public/calibrate.html
+++ b/server/public/calibrate.html
@@ -119,6 +119,11 @@
                 </div>
 
             </div>
+            <div class="span3">
+                <h2>Undistorted & Error Difference </h2>
+                <div id="dist_err">
+                </div>
+            </div>
         </div>
          </section>
     
@@ -257,6 +262,9 @@
                                         {
                                             that.render_graphs();
                                         }
+                       var de = $('#dist_err');
+                        de.html('<a href="'+res.get('undistorted').out+'"><img width="120px" src="'+ res.get('undistorted').out +'"/></a>"');
+                        de.append('<a href="'+res.get('undistorted').diff.out+'"><img width="120px" src="'+ res.get('undistorted').diff.out +'"/></a>"');
 
                     }
                  }); 
