--- a/server/public/environment.html
+++ b/server/public/environment.html
@@ -62,6 +62,13 @@
         <script type="text/javascript" src="js/libs/modules/exporting.js"> </script>
 
         <script type="text/javascript"> 
+
+        window.requestAnimFrame = (function() {
+            return window.requestAnimationFrame || window.webkitRequestAnimationFrame || window.mozRequestAnimationFrame || window.oRequestAnimationFrame || window.msRequestAnimationFrame ||
+            function( /* function */ callback, /* DOMElement */ element) {
+                window.setTimeout(callback, 1000 / 60);
+            };
+        })();
             $('[rel="popover"]').popover({ html : "true" });
                 
         var m = Backbone.Model.extend({ }); 
@@ -104,17 +111,44 @@
             light.position.set( 10,10, 10 );
             this.scene.add( light );
 
-            this.renderer.render(this.scene, this.camera);
+            this.trackball = new THREE.TrackballControls(this.camera, this.renderer.domElement);
+            this.trackball.staticMoving = true;
 
+            var that = this;
+
+            this.trackball.addEventListener('change', function() {
+                 console.log('asdd');
+                 that.render();
+            });
+
+            this.render();
+            this.animate();
+            },
+            animate : function () {
+            var me = this;
+
+
+            // build custom animation frame request
+            window.requestAnimFrame(function() {
+                me.animate();
+
+            });
+            this.trackball.update();
             },
             events : {
 
             },
             draw_camera : function( c ) {
 
-            } // draw_camera
+            }, // draw_camera
+            render : function ()  {
+            this.renderer.render(this.scene, this.camera);
+
+            }
             }); //main_view
-        var side_view = Backbone.View.extend({ 
+    
+
+            var side_view = Backbone.View.extend({ 
             initialize: function() {
                 this.model = new m({} );
                 console.log('Side View Loaded');
