--- a/server/public/example.html
+++ b/server/public/example.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - draggable cubes</title>
+		<title>Simcam Environment</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <meta name="description" content="SimCam">
+        <meta name="author" content="Kartik Thakore">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+
 		<style>
 			body {
 				font-family: Monospace;
 				background-color: #f0f0f0;
 				margin: 0px;
 				overflow: hidden;
+                padding: 0px;
 			}
 		</style>
 	</head>
 	<body>
 
 		<script src="js/libs/Three.js"></script>
-
+    <script type="text/javascript" src="js/libs/jquery.min.js"></script> 
+    <script type="text/javascript" src="js/libs/underscore-min.js"></script>
+    <script type="text/javascript" src="js/libs/backbone-min.js"></script> 
+    <script type="text/javascript" src="js/libs/bootstrap.min.js"></script> 
+    <script type="text/javascript" src="js/libs/highcharts.js"></script> 
+    <script type="text/javascript" src="js/libs/modules/exporting.js">
+    </script>
 
 		<script>
 
@@ -117,7 +129,6 @@
 				renderer.domElement.addEventListener( 'mousedown', onDocumentMouseDown, false );
 				renderer.domElement.addEventListener( 'mouseup', onDocumentMouseUp, false );
 
-				//
 
 				window.addEventListener( 'resize', onWindowResize, false );
 
@@ -162,7 +173,6 @@
 
 				if ( intersects.length > 0 ) {
 
-                    // IF OBJECT IS INTERSECTING ANY THING ELSE
 					if ( INTERSECTED != intersects[ 0 ].object ) {
 
 						if ( INTERSECTED ) INTERSECTED.material.color.setHex( INTERSECTED.currentHex );
@@ -171,8 +181,6 @@
 						INTERSECTED.currentHex = INTERSECTED.material.color.getHex();
 
 						plane.position.copy( INTERSECTED.position );
-//                        var b = camera.position.cross( camera.rotation );
-                        console.log( camera.rotation.x ); 
 						plane.lookAt( camera.position );
                         plane.rotation.copy( camera.rotation );
 
@@ -236,7 +244,6 @@
 
 			}
 
-			//
 
 			function animate() {
 
