No fucking clue

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -24,9 +24,10 @@
                 </div>
                 <div id="side_view" class="span2">
                     <h2>Camera View</h2>
-                    <div id="camera_view" style="background-color:red" ></div>
+                    <div id="camera_view"></div>
                     <h2>Options</h2>
                     <center class="btn-group btn-group-vertical">
+                      <button id="reset_button" class="btn">Reset</button>
                       <button class="btn">Current Camera</button>
                       <button class="btn">Lights</button>
                       <button class="btn">Calibration</button>
