--- a/server/public/iframes/depth_of_field.html
+++ b/server/public/iframes/depth_of_field.html
@@ -3,14 +3,12 @@
     <title>Marble Soccer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <link type="text/css" href="/css/custom-theme/jquery-ui-1.9.2.custom.css" rel="stylesheet" />
-    <link type="text/css" href="/css/bootstrap.min.css" rel="stylesheet">
 
 
 </head>
 <body style="padding:0; margin:0">
 
-<div id="dof">
+<div id="dof" style="width:100%; height:100%">
 
 </div>
 
@@ -18,7 +16,6 @@
 
     <script src="/js/libs/underscore-min.js"></script>
     <script src="/js/libs/backbone-min.js"></script>
-    <script src="/js/libs/bootstrap.min.js"></script>
 
 
    <script src="/js/libs/three.js"></script>
