Cleaned up that

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -28,9 +28,7 @@
                     <h2>Options</h2>
                     <center class="btn-group btn-group-vertical">
                       <button id="reset_button" class="btn">Reset</button>
-                      <button class="btn">Current Camera</button>
-                      <button class="btn">Lights</button>
-                      <button class="btn">Calibration</button>
+                      <button onclick="window.location.href='/calibrate#camera/5'" class="btn">Current Camera</button>
                     </center>
                 </div>
             </div> 
