--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -2,24 +2,43 @@
 <html>
     <head>
         <title>SimCAM Environment</title>
-        <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" />
 
     <style>
+        body {
+            overflow-x: hidden;
+        }
+        .sidemenu {
+            position: absolute;
+            right:-240px;
+            top:0;
+            width:250px;
+            height:100%;
+            z-index:4;
+        }
+        .sidemenu:hover {
+            right: 0px;
+        }
         .bottom_bar h4 {
             color: #444;
         }
         .bottom_bar{
             position: absolute;
-            bottom: 0px;
+            bottom: -50px;
+            left:0px;
+            right:0px;
             margin-top: 2px;
             background: #f1f1f1;
             border-top: 1px solid #e8e8e8;
+            overflow-x: scroll;
+            white-space:nowrap;
         }
         .bottom_bar_img{
             border:2px solid grey; 
             background-color: #fff;
             padding:1px 1px 0px 1px;
             height: 50px;
+            display: inline;
         -webkit-transition-property: height;
            -moz-transition-property: height;
              -o-transition-property: height;
@@ -33,31 +52,133 @@
              -o-transition-timing-function: ease-in;
                 transition-timing-function: ease-in;            
         }
+        .bottom_bar_img_holder {
+            height:60px;
+        }
         .bottom_bar_img:hover {
-            height: 75px;
+            height: 55px;
          }
     </style>
     </head>
     <body>
         <div class="container-fluid">
-            <div class="row-fluid">
+            <div class="row-fluid canvas_row">
                 <canvas class="main_viewer span8" style="height:100%; background-color:grey">
                 </canvas>
 
                 <canvas class="camera_viewer span4" style="height:100%; background-color:red">
 
                 </canvas>
-                <div class="offset8 span4" style=" background-color:red">
+
+        <div class="sidemenu">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Sidebar</li>
+              <li class="active"><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li class="nav-header">Sidebar</li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li class="nav-header">Sidebar</li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+          </div><!--/.well -->
+        </div>
                 </div>
-            </div>
             <div class="row-fluid bottom_bar" >
-            <div class="span12 bottom_bar_header"><h4>Captured Images</h4></div> 
-              <div class=" span12 bottom_bar_img_holder" style="height:50px">
+              <div class="span12 bottom_bar_image_holder"> 
                 <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
                 <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
                 <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
-
-
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+   <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
+                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
               </div> 
             </div>
         </div>
